add logo and favicon

--- a/index.html
+++ b/index.html
@@ -3,24 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boost Étudiant</title>
+    <title>Coaching Minute</title>
+    <link rel="icon" type="image/x-icon" href="src/assets/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&family=Open+Sans:wght@600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
-    <title>Boost Étudiant</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&family=Open+Sans:wght@600&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
-    <!-- DIV 1 : Accueil -->
     <section id="accueil">
       <div class="top-bar">
-        <h1 class="logo">Boost étudiant</h1>
+        <img
+          src="src/assets/logo.png"
+          alt="Logo Coaching Minute"
+          class="logo"
+        />
       </div>
 
       <h2 class="bienvenue" id="titre-principal">Bienvenue</h2>
@@ -66,14 +65,6 @@
         }
       </script>
     </section>
-
-    <script>
-      function scrollToForm() {
-        document
-          .getElementById("formulaire")
-          .scrollIntoView({ behavior: "smooth" });
-      }
-    </script>
 
     <script>
       function scrollToForm() {
