--- a/index.html
+++ b/index.html
@@ -25,11 +25,18 @@
       <h2 class="bienvenue" id="titre-principal">Bienvenue</h2>
 
       <p class="intro">
-        Boost Étudiant est une application de coaching express conçue pour
-        t’accompagner dans les moments clés de ta vie universitaire. Stressé
-        avant un examen ? Démotivé en plein semestre ? En pleine remise en
-        question sur ton orientation ? Notre IA te propose en temps réel un mini
-        coaching personnalisé, adapté à ton humeur, tes objectifs et ton niveau.
+        Coaching Minute est une solution innovante de coaching audio pensée pour
+        accompagner les étudiants à chaque étape de leur parcours.
+      </p>
+      <p class="intro">
+        Vous avez besoin d’un coup de pouce pour mieux réussir vos études ? Vous
+        vous interrogez sur votre orientation scolaire ? Il vous suffit de poser
+        vos questions à notre IA : elle vous apportera des réponses claires,
+        adaptées à votre profil, et à votre niveau scolaire.
+      </p>
+      <p class="intro">
+        Grâce à Coaching Minute, avancez plus sereinement vers l’enseignement
+        supérieur et prenez en main votre avenir en toute confiance.
       </p>
 
       <button class="btn" onclick="scrollToForm()">Commencer</button>
