--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   </head>
   <body>
     <!-- DIV 1 : Accueil -->
@@ -31,7 +32,9 @@
     </section>
 
     <!-- DIV 2 : Formulaire -->
-    <section id="formulaire">
+    <!-- DIV 2 : Formulaire -->
+    <section id="formulaire" style="display: none">
+      <!-- On cache le formulaire initialement -->
       <h2 class="form-title" id="titre-principal">Coach Minute</h2>
       <p class="form-desc">Les champs avec un * sont obligatoires.</p>
 
@@ -65,6 +68,16 @@
           <option value="orientation">Je ne sais pas où je vais</option>
         </select>
 
+        <!-- Nouveau champ Email -->
+        <label for="email">Ton adresse e-mail *</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="Entrez votre e-mail"
+          required
+        />
+
         <button type="submit" class="btn form-btn">Envoyer</button>
       </form>
     </section>
@@ -76,5 +89,6 @@
           .scrollIntoView({ behavior: "smooth" });
       }
     </script>
+    <script src="script.js"></script>
   </body>
 </html>
