--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 method: "POST",
                 headers: {
                   Authorization:
-                    "Bearer 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", // Remplacez par votre clé API OpenRouter
+                    "Bearer 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",
                   "Content-Type": "application/json",
                   // "HTTP-Referer": "https://votre-site.com", // Facultatif
                   // "X-Title": "Coaching Minute", // Facultatif
